add title and picture

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friday Aug 7th</title>
+<head>  
+  <title>Ben Stoller Landing Page</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <h1 id="main_name"><strong>Ben Stoller</strong></h1>
+  <img src="stoller_pic_berlin.jpg">
+
   
 </body>
 </html>
+
+
+
+
+
+<!-- Your name.
+An image of you, or something that represents you.
+A list of projects you have created with active links to their GitHub pages sites or GitHub repositories.
+For each, include a brief description of the project and what languages it uses.
+An “About Me” section.
+Your background (education, job experience, or why did you decide to take a class on programming, etc).
+Your current interests, hobbies, and skills.
+A gh-pages branch so that your site may be viewed on GitHub Pages at your-username.github.io/portfolio. -->
