add about me section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 <body>
   <h1 id="main_name"><strong>Ben Stoller</strong></h1>
   <img src="stoller_pic_berlin.jpg">
+  <!-- ABOUT ME  include interests, hobbies, skills-->
+  <div class="container">
+    <div class="row">
+      <div class ="card" id="about_me">
+        <div class ="card-body">
+          <h2>About me:</h2>
+          <p>Born in wyoming in 1985, I currently live in Portland, OR. The northwest has unparalelled beauty and I love getting out of the city and into the outdoors</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- BACKGROUND -->
+
 
   
 </body>
@@ -25,3 +39,9 @@ An “About Me” section.
 Your background (education, job experience, or why did you decide to take a class on programming, etc).
 Your current interests, hobbies, and skills.
 A gh-pages branch so that your site may be viewed on GitHub Pages at your-username.github.io/portfolio. -->
+
+<!-- The following HTML tags are all used: p, h, ul, ol, li, em, strong, a, img, div, and span.
+Project includes a custom-made stylesheet that uses typography styles, cascading, the box model, and floats.
+Code is clean, well-refactored, and easy-to-read. This includes correct indendation, spacing, and including only necessary comments and debugging tools.
+Commits are made regularly with clear messages that finish the phrase "It will…"
+ -->
