add background section

--- a/index.html
+++ b/index.html
@@ -11,15 +11,28 @@
   <!-- ABOUT ME  include interests, hobbies, skills-->
   <div class="container">
     <div class="row">
-      <div class ="card" id="about_me">
+      <div class ="card box1">
         <div class ="card-body">
           <h2>About me:</h2>
           <p>Born in wyoming in 1985, I currently live in Portland, OR. The northwest has unparalelled beauty and I love getting out of the city and into the outdoors</p>
+
         </div>
       </div>
     </div>
-  </div>
+    <div class="row">
+      <div class ="card box1">
+        <div class ="card-body">
+          <h2>Background:</h2>
+          <p>After moving to portland I started an intership at a recording studio downtown</p>
 
+        </div>
+      </div>
+    </div>
+
+
+
+
+  </div>
   <!-- BACKGROUND -->
 
 
