add projects section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
       </div>
     </div>
+    <!-- BACKGROUND -->
     <div class="row">
       <div class ="card box1">
         <div class ="card-body">
@@ -28,12 +29,41 @@
         </div>
       </div>
     </div>
-
-
-
-
-  </div>
-  <!-- BACKGROUND -->
+    <!-- Projects I've worked on -->
+    <div class="projects">
+      <h4><p>Some coding projects I've worked on so far:</p></h4>
+      <div class="row">
+        <div class ="col-6">
+          <ul>
+            <h3>Project name</h3>
+            <li><p>Description</p></li>
+          </ul>
+        </div>
+        <div class ="col-6">
+          <ul>
+            <h3>Project name</h3>
+            <li><p>Description</p></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class ="col-6">
+          <ul>
+            <h3>Project name</h3>
+            <li><p>Description</p></li>
+          </ul>
+        </div>
+        <div class ="col-6">
+          <ul>
+            <h3>Project name</h3>
+            <li><p>Description</p></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+   </div>
+  
+  
 
 
   
