add first projects links

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <div class="row">
         <div class ="col-6">
           <ul>
-            <h3>Project name</h3>
+            <h3><a href="https://stollersystem.github.io/wiki_homepage/">Fake Wikipedia Homepage</a></h3>
             <li><p>Description</p></li>
           </ul>
         </div>
         <div class ="col-6">
           <ul>
-            <h3>Project name</h3>
-            <li><p>Description</p></li>
+            <h3><a href="https://stollersystem.github.io/my-first-webpage/">My First Webpage</a></h3>
+            <li><p>It;s not much, but its a start!</p></li>
           </ul>
         </div>
       </div>
@@ -76,11 +76,15 @@
 
 <!-- Your name.
 An image of you, or something that represents you.
+
+An “About Me” section.
+Your current interests, hobbies, and skills.
+
+Your background (education, job experience, or why did you decide to take a class on programming, etc).
+
 A list of projects you have created with active links to their GitHub pages sites or GitHub repositories.
 For each, include a brief description of the project and what languages it uses.
-An “About Me” section.
-Your background (education, job experience, or why did you decide to take a class on programming, etc).
-Your current interests, hobbies, and skills.
+
 A gh-pages branch so that your site may be viewed on GitHub Pages at your-username.github.io/portfolio. -->
 
 <!-- The following HTML tags are all used: p, h, ul, ol, li, em, strong, a, img, div, and span.
