add about me information

--- a/index.html
+++ b/index.html
@@ -10,13 +10,43 @@
   <img src="stoller_pic_berlin.jpg">
   <!-- ABOUT ME  include interests, hobbies, skills-->
   <div class="container">
-    <div class="row">
-      <div class ="card box1">
-        <div class ="card-body">
+    <div class ="card box1">
+      <div class ="card-body">
+        <div class="row">      
           <h2>About me:</h2>
-          <p>Born in wyoming in 1985, I currently live in Portland, OR. The northwest has unparalelled beauty and I love getting out of the city and into the outdoors</p>
-
+          <p>Born in wyoming in 1985, I currently live in Portland, OR. The northwest has unparalelled beauty and I love getting out of the city and into the outdoors.
+            Not long after moving to Oregon I started working professionally as a sound enginner. One job led to the next and eventually I started working directly for bands, 
+            accompanying then on tour and running sound for the shows. For the last 10 years I've toured much of the US, Canada and Europe and have been as far as Istanbul. 
+            I have made some many great friends and partners over the years and have grown trememdously while out on the road. 
+          </p>
         </div>
+        <div class="row">
+          <div class = "col-4">
+            <h5>Interests</h5>
+            <ol>
+              <li><p>Music! I love listening and playing! While I've been a drummer most of my live, I'm also completely obsessed with synthesizers.</p></li>
+              <li><p>The outdoors! I love getting out of town whenever possible and heading out to hike or camp near amazing lakes and rivers</p></li>
+              <li><p>Computers! Since I was a little kid I've always been interested in how computers work and what ou can accomplish with them</p></li>
+            </ol>
+          </div>
+          <div class = "col-4">
+            <h5>Hobbies:</h5>
+            <ol>
+              <li><p>Electronics! Soldering up a new synthesizer kit is one of my favorite things to do</p></li>
+              <li><p>Boardgames! It is the golden age of tale top gaming and I coudn't be more excited. There are so many creative and fun games available these days</p></li>
+
+            </ol>
+          </div> 
+          <div class = "col-4">
+            <h5>Skills:</h5>
+            <ol>
+              <li><p>Audio! Spending aover a decade working in the field has given me many skills when it comes to managing audio systems and mixing both recorded and live audio</p></li>
+              <li><p>Cooking! My family runs a restaurant back in Wyoming and as soon as I was old enough I was in there washing dishes. 
+                I continued to work in the service industry and grow my kitchen skills for many, many years after that </p></li>
+              <li><p>Problem Solving! I pride myself on the abbility to keep calm and try to work through problems when the pressure is on.</p></li>
+            </ol>
+          </div>  
+        </div>        
       </div>
     </div>
     <!-- BACKGROUND -->
@@ -30,7 +60,7 @@
       </div>
     </div>
     <!-- Projects I've worked on -->
-    <div class="projects">
+    <div class="projects box1">
       <h4><p>Some coding projects I've worked on so far:</p></h4>
       <div class="row">
         <div class ="col-6">
@@ -42,20 +72,20 @@
         <div class ="col-6">
           <ul>
             <h3><a href="https://stollersystem.github.io/my-first-webpage/">My First Webpage</a></h3>
-            <li><p>It;s not much, but its a start!</p></li>
+            <li><p>It's not much, but its a start!</p></li>
           </ul>
         </div>
       </div>
       <div class="row">
         <div class ="col-6">
           <ul>
-            <h3>Project name</h3>
+            <h3><a href="https://github.com/StollerSystem/animal_shelter_page">Animal Adoption Page</a></h3>
             <li><p>Description</p></li>
           </ul>
         </div>
         <div class ="col-6">
           <ul>
-            <h3>Project name</h3>
+            <h3><a href="https://github.com/StollerSystem/vacation">Vacation Page</a></h3>
             <li><p>Description</p></li>
           </ul>
         </div>
