--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1 id="main_name"><strong>Ben Stoller</strong></h1>
-  <img src="stoller_pic_berlin.jpg">
+  <h1 id="main_name"><strong>Ben Stoller</strong></h1>  
+  
   <!-- ABOUT ME  include interests, hobbies, skills-->
   <div class="container">
+    <img src="stoller_pic_berlin.jpg" class="center-image">
     <div class ="card box1">
       <div class ="card-body">
         <div class="row">      
@@ -49,7 +50,7 @@
         </div>        
       </div>
     </div>
-    <!-- BACKGROUND -->
+    <!-- BACKGROUND 
     <div class="row">
       <div class ="card box1">
         <div class ="card-body">
@@ -58,7 +59,7 @@
 
         </div>
       </div>
-    </div>
+    </div>-->
     <!-- Projects I've worked on -->
     <div class="projects box1">
       <h4><p>Some coding projects I've worked on so far:</p></h4>
@@ -66,13 +67,13 @@
         <div class ="col-6">
           <ul>
             <h3><a href="https://stollersystem.github.io/wiki_homepage/">Fake Wikipedia Homepage</a></h3>
-            <li><p>Description</p></li>
+            <li><p>Using HTML, CSS and incorperating bootstrap my partner and I built a replica of the wikipedia homepage</p></li>
           </ul>
         </div>
         <div class ="col-6">
           <ul>
             <h3><a href="https://stollersystem.github.io/my-first-webpage/">My First Webpage</a></h3>
-            <li><p>It's not much, but its a start!</p></li>
+            <li><p>It's not much, but its a start! My first endeavor into making a wenpage using HTML and CSS</p></li>
           </ul>
         </div>
       </div>
@@ -80,13 +81,13 @@
         <div class ="col-6">
           <ul>
             <h3><a href="https://github.com/StollerSystem/animal_shelter_page">Animal Adoption Page</a></h3>
-            <li><p>Description</p></li>
+            <li><p>A fun little page made to exercise some for capabilites of HTML and CSS</p></li>
           </ul>
         </div>
         <div class ="col-6">
           <ul>
             <h3><a href="https://github.com/StollerSystem/vacation">Vacation Page</a></h3>
-            <li><p>Description</p></li>
+            <li><p>This project was our first experance incorperating bootstrap into our page while using HTML and CSS</p></li>
           </ul>
         </div>
       </div>
