add background image and quote

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             <li><p><u>Problem Solving</u> - I pride myself on the abbility to keep calm and try to work through problems when the pressure is on.</p></li>
           </ol>
         </div> 
-      </div>               
+      </div>
+      <!-- <blockquote class="blockquote quote">
+        <p>"It helped so much to have you seeing things that I wasn't, and you've got a great and clear communication style."</p>
+        <footer class="blockquote-footer">My partner on the fourth day</footer>
+      </blockquote>                -->
     </div>
     
     <!-- BACKGROUND 
@@ -62,7 +66,7 @@
     </div>-->
     <!-- Projects I've worked on -->
     <div class="projects box1">
-      <h4>Coding projects:</h4>
+      <h4>Coding projects</h4>
       <div class="row">
         <div class ="col-6">
           <ul>
@@ -91,6 +95,10 @@
           </ul>
         </div>
       </div>
+      <blockquote class="blockquote quote">
+        <p>"It helped so much to have you seeing things that I wasn't, and you've got a great and clear communication style."</p>
+        <footer class="blockquote-footer">Vanessa, my partner on the fourth day</footer>
+      </blockquote>    
     </div>
    </div>
   
