add box to top section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>  
-  <h1 id="main_name"><strong>BEN STOLLER</strong></h1> 
+<body>    
   <div class="container">
-    <img src="stoller_pic_berlin.jpg" class="center-image" alt="Ben in Berlin">
-    <!-- <footer class="blockquote-footer">Berlin, 2016</footer> -->
+    <div class="top-section">
+      <h1 id="main_name"><strong>BEN STOLLER</strong></h1>
+      <img src="stoller_pic_berlin.jpg" class="center-image" alt="Ben in Berlin">
+      <!-- <footer class="blockquote-footer">Berlin, 2016</footer> -->
+    </div>    
     <div class ="card box1">
       <div class ="card-body">               
         <h2>About me:</h2>          
@@ -46,7 +48,7 @@
       </div>          
     </div>    
     <div class="projects box1">
-      <h4>Coding projects</h4>
+      <h4> - Coding Projects - </h4>
       <div class="row">
         <div class ="col-6">
           <ul>
