fill out README

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="top-section">
       <h1 id="main_name"><strong>BEN STOLLER</strong></h1>
       <img src="stoller_pic_berlin.jpg" class="center-image" alt="Ben in Berlin">
-      <!-- <footer class="blockquote-footer">Berlin, 2016</footer> -->
+      <footer class="blockquote-footer">Kreuzberg, Berlin - 2016</footer>
     </div>    
     <div class ="card box1">
       <div class ="card-body">               
