--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h5>Hobbies:</h5>
           <ol>
             <li><p><u>Electronics</u> - Soldering up a new synthesizer kit is one of my favorite things to do</p></li>
-            <li><p><u>Boardgames</u> - It is the golden age of tale top gaming and I coudn't be more excited. There are so many creative and fun games available these days</p></li>
+            <li><p><u>Boardgames</u> - It is the golden age of tale table gaming and I coudn't be more excited. There are so many creative and fun games available these days</p></li>
             <li><p><u>Drawing</u> -  I've always loved to draw and have alwasy been fascinated by shapes and gemoetry. Lately creating geometric drawings using a compass has been a lot of fun.</p></li> 
           </ol>
         </div> 
@@ -82,7 +82,8 @@
         <footer class="blockquote-footer">Vanessa, my partner on the fourth day</footer>
       </blockquote>    
     </div>
-   </div>  
+   </div> 
+   <footer class="blockquote-footer" id="copywrite">StollerSystem 2020</footer>
 </body>
 </html>
 
