--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ol>
             <li><p><u>Music</u> - I love listening, playing as well as performing and attending shows! While I've been a drummer most of my life, I'm also completely <em>obsessed</em> with synthesizers.</p></li>
             <li><p><u>The Outdoors</u> - I love getting out of town whenever possible and heading out to hike or camp near amazing lakes and rivers.</p></li>
-            <li><p><u>Computers</u> - Since I was a little kid I've always been interested in how computers work and what you can accomplish with them.</p></li>
+            <li><p><u>Computers</u> - Since I was young I've always been interested in how computers work and what you can accomplish with them.</p></li>
           </ol>
         </div>
         <div class = "column">
@@ -50,17 +50,17 @@
     <div class="projects box1">
       <h4> - Coding Projects - </h4>
       <div class="row">
-        <div class ="col-6">
+        <div class ="col-md-6">
           <div class = "card project-card">
             <div class = "card-body">
-              <ul>
+              <ul class>
                 <h3><a href="https://stollersystem.github.io/wiki_homepage/">Fake Wikipedia Homepage</a></h3>
                 <li><p>- Using <strong>HTML</strong>, <strong>CSS</strong> and incorperating bootstrap my partner and I built a replica of the wikipedia homepage</p></li>
               </ul>
             </div>
           </div>          
         </div>
-        <div class ="col-6">
+        <div class ="col-md-6">
           <div class = "card project-card">
             <div class = "card-body">
               <ul>
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="row">
-        <div class ="col-6">
+        <div class ="col-md-6">
           <div class = "card project-card">
             <div class = "card-body">
               <ul>
@@ -82,7 +82,7 @@
             </div>
           </div>          
         </div>
-        <div class ="col-6">
+        <div class ="col-md-6">
           <div class = "card project-card">
             <div class = "card-body">
               <ul>
